Upgraded apiato to laravel 5.8, and some other dependencies to test

--- a/app/Ship/composer.json
+++ b/app/Ship/composer.json
@@ -1,10 +1,16 @@
 {
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/xpress7/core"
+    }
+  ],
   "require": {
-    "apiato/core": "dev-master",
+    "xpress7/core": "dev-master",
     "barryvdh/laravel-debugbar": "3.*"
   },
   "require-dev": {
-    "barryvdh/laravel-ide-helper": "2.4.*"
+    "barryvdh/laravel-ide-helper": "2.6.*"
   },
   "autoload": {
     "files": [
