--- a/app/Containers/Debugger/composer.json
+++ b/app/Containers/Debugger/composer.json
@@ -3,6 +3,6 @@
   "description": "apiato Container.",
   "type": "apiato-container",
   "require": {
-    "jenssegers/agent": "^2.4"
+    "jenssegers/agent": "^2.*"
   }
 }
