--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "apiato/apiato",
-  "description": "A flawless framework for building scalable and testable API-Centric Apps with PHP and Laravel.",
+  "description": "Forked from apiato/apiato to upgrade to laravel 5.8",
   "homepage": "http://apiato.io/",
   "support": {
     "issues": "https://github.com/apiato/apiato/issues",
@@ -33,7 +33,7 @@
     "ext-pdo": "*",
     "ext-tokenizer": "*",
     "fideloper/proxy": "~4.0",
-    "laravel/framework": "5.6.*",
+    "laravel/framework": "5.8.*",
     "laravel/tinker": "~1.0",
     "doctrine/dbal": "2.5.*",
     "wikimedia/composer-merge-plugin": "^1.3.1"
