Changing package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "apiato/apiato",
+  "name": "xpress7/apiato",
   "description": "Forked from apiato/apiato to upgrade to laravel 5.8",
   "homepage": "http://apiato.io/",
   "support": {
