--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "opencollective": "^1.0.3"
   },
   "devDependencies": {
-    "axios": "^0.16.2",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^1.0",
-    "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "axios": "^0.18",
+    "bootstrap": "^4.0.0",
+    "cross-env": "^5.1",
+    "laravel-mix": "^4.0.7",
+    "lodash": "^4.17.5",
+    "vue": "^2.5.17"
   },
   "collective": {
     "type": "opencollective",
