--- a/app/Containers/SocialAuth/composer.json
+++ b/app/Containers/SocialAuth/composer.json
@@ -3,6 +3,6 @@
   "description": "apiato Container.",
   "type": "apiato-container",
   "require": {
-    "laravel/socialite": "^4.*"
+    "laravel/socialite": "^4.0"
   }
 }
