--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "postinstall": "opencollective postinstall"
-  },
-  "dependencies": {
-    "apidoc": "*",
-    "opencollective": "^1.0.3"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
     "axios": "^0.18",
@@ -21,10 +16,5 @@
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.5",
     "vue": "^2.5.17"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/apiato",
-    "logo": "https://opencollective.com/opencollective/logo.txt"
   }
 }
